# screentimesaver

./: README.md  pyproject.toml
config/: config.toml
src/screentime/: main.py
src/screentime/constants/: schemas.py
src/screentime/processing/: io.py  stream.py
src/screentime/queries/: appusage.py
src/screentime/utils/: delta.py  logging.py
