[project]
name = "screentime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deltalake>=0.24.0",
    "polars>=1.19.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ruff>=0.6.9",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/screentime"]
